examples/bad/05-unknown.tx
fun main(): Void {
    var x: Int = 4;
    var z: Int = x + y;
    return;
}